feat add log in service

--- a/src/app/main-page/content-main/content-main.component.html
+++ b/src/app/main-page/content-main/content-main.component.html
@@ -1,11 +1,10 @@
 <div class="container-fluid posAbs">
-    <app-header></app-header>
-<br />
-<app-flights-form></app-flights-form>
-<br />
-<div class="container custom">
+  <app-header (signIn)="onSignIn($event)"></app-header>
+  <br />
+  <app-flights-form></app-flights-form>
+  <br />
+  <div *ngIf="signedIn" class="container custom">
     <app-authentication-form-container></app-authentication-form-container>
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
-</div>
-
