--- a/src/app/user-authentication/register/register.component.html
+++ b/src/app/user-authentication/register/register.component.html
@@ -1,73 +1,122 @@
 <div class="login-container">
-	<div class="login-content">
-		
-		<mat-card>
-			<a href="" class="btn btn-light m-2 d-flex justify-content-center align-items-center"><img style="margin-right: 15px;" src="../../../assets/fblogo.png" alt="fb">Continue with Facebook</a>
-            <a href="" class="btn btn-light m-2 d-flex justify-content-center align-items-center"><img style="margin-right: 25px;" src="../../../assets/google_24px.png" alt="google">Continue with Google</a>
-            <p class="text-center m-4">or sign up with your email</p>
-			<form class="d-flex flex-column align-items-center justify-content-center" [formGroup]="registerForm" #formDirective="ngForm" 
-  (ngSubmit)="onSubmit(registerForm, formDirective)">
-				<mat-form-field>
-					<input autofocus type="email" matInput placeholder="Email *" formControlName="email">
-					<mat-error *ngIf="checkValidation('email')">
-						{{ emaiErrors() }}
-          
-					</mat-error>
-				</mat-form-field>
+  <div class="login-content">
+    <mat-card>
+      <a
+        href=""
+        class="btn btn-light m-2 d-flex justify-content-center align-items-center"
+        ><img
+          style="margin-right: 15px"
+          src="../../../assets/fblogo.png"
+          alt="fb"
+        />Continue with Facebook</a
+      >
+      <a
+        href=""
+        class="btn btn-light m-2 d-flex justify-content-center align-items-center"
+        ><img
+          style="margin-right: 25px"
+          src="../../../assets/google_24px.png"
+          alt="google"
+        />Continue with Google</a
+      >
+      <p class="text-center m-4">or sign up with your email</p>
+      <form
+        class="d-flex flex-column align-items-center justify-content-center"
+        [formGroup]="registerForm"
+        #formDirective="ngForm"
+        (ngSubmit)="onSubmit(registerForm, formDirective)"
+      >
+        <mat-form-field>
+          <input
+            autofocus
+            type="email"
+            matInput
+            placeholder="Email *"
+            formControlName="email"
+          />
+          <mat-error *ngIf="checkValidation('email')">
+            {{ emaiErrors() }}
+          </mat-error>
+        </mat-form-field>
 
-				
-				<mat-form-field >
-					<input autofocus type="text" matInput placeholder="Username *" formControlName="username">
-					<mat-error *ngIf="checkValidation('username')">
-						{{ fieldRequired }}
-					</mat-error>
-				</mat-form-field>
-					
-  
-				<mat-form-field >
-					<input type="password" autocomplete="false" matInput placeholder="Password *" formControlName="password">
-          <mat-hint>Choose a password of at least eight characters, one uppercase letter and one number</mat-hint>
-      <mat-error *ngIf="checkValidation('password')">
-        {{ getErrorPassword() }}
-      </mat-error>
-				</mat-form-field>
-				<div class="col-sm-7 d-flex justify-content-center ">
-					<mat-form-field appearance="fill">
-					  <mat-label>Choose a date</mat-label>
-					  <input matInput [matDatepicker]="picker2" formControlName="dateOfBirth">
-					  <mat-hint>MM/DD/YYYY</mat-hint>
-					  <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-					  <mat-datepicker #picker2></mat-datepicker>
-					  <mat-error *ngIf="checkValidation('dateOfBirth')">
-						{{ dateErrors() }}
-          
-					</mat-error>
-					</mat-form-field>
-				  </div>
-				  <mat-radio-group formControlName="gender">
-					<mat-radio-button  [value]="'option1'">Option 1</mat-radio-button>
-					<mat-radio-button  [value]="'option2'">Option 2</mat-radio-button>
-				  </mat-radio-group>
-				  <mat-error *ngIf="checkValidation('gender')">
-					{{ fieldRequired }}
-	  
-				</mat-error>
-				  <mat-select-country formControlName="country">
-				</mat-select-country>
-				<mat-error *ngIf="checkValidation('country')">
-					{{ fieldRequired }}
-				</mat-error>
-				<mat-checkbox formControlName="termsAndServices" >
-					I agree to Airway's Privacy Policy and Terms of Use
-				</mat-checkbox>
-				<mat-error *ngIf="checkValidation('termsAndServices')">
-					{{ fieldRequired }}
-				</mat-error>
-  <hr>
-			<div class="socialMediaFlex">
-        	<button  [disabled]="registerForm.invalid"  class="m-4"  type="submit" mat-raised-button color="primary">Submit</button>
-      </div>
-			</form>
-		</mat-card>
-	</div>
+        <mat-form-field>
+          <input
+            autofocus
+            type="text"
+            matInput
+            placeholder="Username *"
+            formControlName="username"
+          />
+          <mat-error *ngIf="checkValidation('username')">
+            {{ fieldRequired }}
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input
+            type="password"
+            autocomplete="false"
+            matInput
+            placeholder="Password *"
+            formControlName="password"
+          />
+          <mat-hint
+            >Choose a password of at least eight characters, one uppercase
+            letter and one number</mat-hint
+          >
+          <mat-error *ngIf="checkValidation('password')">
+            {{ getErrorPassword() }}
+          </mat-error>
+        </mat-form-field>
+        <div class="col-sm-7 d-flex justify-content-center">
+          <mat-form-field appearance="fill">
+            <mat-label>Choose a date</mat-label>
+            <input
+              matInput
+              [matDatepicker]="picker2"
+              formControlName="dateOfBirth"
+            />
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle
+              matIconSuffix
+              [for]="picker2"
+            ></mat-datepicker-toggle>
+            <mat-datepicker #picker2></mat-datepicker>
+            <mat-error *ngIf="checkValidation('dateOfBirth')">
+              {{ dateErrors() }}
+            </mat-error>
+          </mat-form-field>
+        </div>
+        <mat-radio-group formControlName="gender">
+          <mat-radio-button [value]="'option1'">Option 1</mat-radio-button>
+          <mat-radio-button [value]="'option2'">Option 2</mat-radio-button>
+        </mat-radio-group>
+        <mat-error *ngIf="checkValidation('gender')">
+          {{ fieldRequired }}
+        </mat-error>
+        <mat-select-country formControlName="country"> </mat-select-country>
+        <mat-error *ngIf="checkValidation('country')">
+          {{ fieldRequired }}
+        </mat-error>
+        <mat-checkbox required formControlName="termsAndServices">
+          I agree to Airway's Privacy Policy and Terms of Use
+        </mat-checkbox>
+        <mat-error *ngIf="checkValidation('termsAndServices')">
+          {{ fieldRequired }}
+        </mat-error>
+        <hr />
+        <div class="socialMediaFlex">
+          <button
+            [disabled]="registerForm.invalid"
+            class="m-4"
+            type="submit"
+            mat-raised-button
+            color="primary"
+          >
+            Submit
+          </button>
+        </div>
+      </form>
+    </mat-card>
+  </div>
 </div>
