--- a/src/app/user-authentication/register/register.component.html
+++ b/src/app/user-authentication/register/register.component.html
@@ -24,7 +24,7 @@
         class="d-flex flex-column align-items-center justify-content-center"
         [formGroup]="registerForm"
         #formDirective="ngForm"
-        (ngSubmit)="onSubmit(registerForm, formDirective)"
+        (ngSubmit)="onSubmit(formDirective)"
       >
         <mat-form-field>
           <input
