feat: add booking markup

--- a/src/app/main-page/content-main/content-main.component.html
+++ b/src/app/main-page/content-main/content-main.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid posAbs">
   <app-header (signIn)="onSignIn($event)"></app-header>
+  <app-booking-view></app-booking-view>
   <br />
   <app-flights-form></app-flights-form>
   <br />
