--- a/src/app/booking/flights-search-result/flights-search-result.component.html
+++ b/src/app/booking/flights-search-result/flights-search-result.component.html
@@ -8,4 +8,24 @@
             <p *ngIf="flight.date >= 3">{{ flight.price }}</p>
         </div>
     </div>
+    <app-flight-selected></app-flight-selected>
+    <div class="d-flex justify-content-end">
+        <a href="" class="btn ">back</a>
+        <a href="" class="btn btn-primary">continue</a>
+    </div>
+    <h2 style="margin-left: 15px;"><span><img src="../../../assets/planeLeft.png" alt="planr"></span> from to destination</h2>
+    <div class="cards-container d-flex m-2">
+        <div style="width: 20vw; border-right: 2px solid black; margin-left: 15px;" *ngFor="let flight of mockFlights | slice:0:5" class="flight-card">
+            <p>{{ flight.date }}</p>
+            <p>{{ flight.day }}</p>
+            <div *ngIf="flight.date < 3"><img src="../../../assets/noFly.png" alt="noFly"></div>
+            <p *ngIf="flight.date >= 3">{{ flight.price }}</p>
+        </div>
+    </div>
+    <app-return-flight-selected></app-return-flight-selected>
+    <div class="d-flex justify-content-end">
+        <a href="" class="btn ">back</a>
+        <a href="" class="btn btn-primary">continue</a>
+    </div>
 </div>
+
