--- a/src/app/main-page/content-main/content-main.component.html
+++ b/src/app/main-page/content-main/content-main.component.html
@@ -2,6 +2,8 @@
   <app-header (signIn)="onSignIn($event)"></app-header>
   <app-booking-view></app-booking-view>
   <br />
+  <app-passengers-view></app-passengers-view>
+  <br />
   <app-flights-form></app-flights-form>
   <br />
   <div *ngIf="signedIn" class="container custom">
