--- a/src/app/booking/return-flight-selected/return-flight-selected.component.html
+++ b/src/app/booking/return-flight-selected/return-flight-selected.component.html
@@ -1,30 +1,38 @@
-<div class="container d-flex align-items-center">
+<div class="container d-flex align-items-center justify-content-between">
+  <div>
+    <p>sat march 28 (date)</p>
+    <p>4:50 (time ) <span>utc timeZone</span></p>
+    <p>location</p>
+  </div>
+  <div class="d-flex flex-column align-items-center">
+    <p>time of flight</p>
     <div>
-        <p>sat march 28 (date)</p>
-        <p>4:50 (time ) <span>utc timeZone</span></p>
-        <p>location</p>
+      <span
+        ><img
+          style="max-width: 10vw"
+          src="../../../assets/Arrow 1.png"
+          alt="" /></span
+      ><img src="../../../assets/planeFlying.jpg" alt="plane" />
+      <span
+        ><img style="max-width: 10vw" src="../../../assets/Arrow 1.png" alt=""
+      /></span>
     </div>
-    <div class="d-flex flex-column align-items-center" >
-        <p>time of flight</p>
-        <div ><span><img style="max-width: 15vw;" src="../../../assets/Arrow 1.png" alt=""></span><img  src="../../../assets/planeFlying.jpg" alt="plane"> <span><img style="max-width: 15vw;" src="../../../assets/Arrow 1.png" alt=""></span></div>
-        <p>type of flight</p>
-    </div>
+    <p>type of flight</p>
+  </div>
+  <div>
+    <p>sat march 28 (date of arriwal)</p>
+    <p><span>utc timeZone</span>4:50 (time )</p>
+    <p>location</p>
+  </div>
+  <div>
+    <p>Flight no. FR 1925</p>
+  </div>
+  <div>
+    <p style="background-color: #f1c933">100 seats available</p>
     <div>
-        <p>sat march 28 (date of arriwal)</p>
-        <p> <span>utc timeZone</span>4:50 (time ) </p>
-        <p>location</p>
+      <p style="margin: 0">price</p>
+      <p>€146.70</p>
     </div>
-    <div >
-        <p>Flight no.
-            FR 1925</p>
-    </div>
-    <div >
-        <p style="background-color: #F1C933
-        ;">100 seats available</p>
-        <div>
-            <p style="margin: 0;">price</p>
-            <p>€146.70</p>
-        </div>
-    </div>
-    <a href="" class="btn btn-primary">select</a>
+  </div>
+  <a href="" class="btn btn-primary">select</a>
 </div>
