feat: add order summary

--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -1,6 +1,11 @@
-<div class="container">
+<form class="container">
   <app-passenger-adult></app-passenger-adult>
   <app-passenger-child></app-passenger-child>
   <app-passenger-infant></app-passenger-infant>
   <app-passenger-contact-info></app-passenger-contact-info>
-</div>
+  <div class="row justify-content-end">
+
+    <a href="" class="btn btn-warning col-1 me-3">back</a>
+    <button type="submit" class="btn btn-success col-1">continue</button>
+  </div>
+</form>
