--- a/src/app/main-page/content-main/content-main.component.html
+++ b/src/app/main-page/content-main/content-main.component.html
@@ -10,4 +10,5 @@
     <app-authentication-form-container></app-authentication-form-container>
   </div>
   <app-footer></app-footer>
+  <app-summary-view></app-summary-view>
 </div>
