feat: add pages states log in form fixes and default values for logIn/Register form

--- a/src/app/user-authentication/register/register.component.html
+++ b/src/app/user-authentication/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="login-content">
     <mat-card>
       <a
-        href=""
+        (click)="onGoogleFbSignIn()"
         class="btn btn-light m-2 d-flex justify-content-center align-items-center"
         ><img
           style="margin-right: 15px"
@@ -11,7 +11,7 @@
         />Continue with Facebook</a
       >
       <a
-        href=""
+        (click)="onGoogleFbSignIn()"
         class="btn btn-light m-2 d-flex justify-content-center align-items-center"
         ><img
           style="margin-right: 25px"
