--- a/src/app/user-authentication/log-in/log-in.component.html
+++ b/src/app/user-authentication/log-in/log-in.component.html
@@ -2,7 +2,7 @@
   <div class="login-content">
     <mat-card>
       <a
-        href=""
+        (click)="onGoogleFbSignIn()"
         class="btn btn-light m-2 d-flex justify-content-center align-items-center"
         ><img
           style="margin-right: 15px"
@@ -11,7 +11,7 @@
         />Continue with Facebook</a
       >
       <a
-        href=""
+        (click)="onGoogleFbSignIn()"
         class="btn btn-light m-2 d-flex justify-content-center align-items-center"
         ><img
           style="margin-right: 25px"
@@ -28,16 +28,15 @@
         <mat-form-field>
           <input
             autofocus
-            type="text"
+            type="email"
             matInput
-            placeholder="Username *"
-            formControlName="username"
+            placeholder="Email *"
+            formControlName="email"
           />
-          <mat-error *ngIf="checkValidation('username')">
-            {{ fieldRequired }}
+          <mat-error *ngIf="checkValidation('email')">
+            {{ emaiErrors() }}
           </mat-error>
         </mat-form-field>
-
         <mat-form-field>
           <input
             type="password"
