--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -18,7 +18,7 @@
           id="navbarSupportedContent"
         >
           <div class="nav-content d-flex justify-content-center">
-            <a class="nav-link" href=""
+            <a class="nav-link" routerLink="/Home" style="cursor: pointer"
               ><img src="../../../assets/logo.png" alt="logo"
             /></a>
           </div>
