--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -87,23 +87,24 @@
           <div class="d-flex flex-lg-row flex-column align-items-center">
             <a class="nav-link" href="">Book flights</a>
             <mat-form-field class="m-4" appearance="fill">
-              <mat-label>Select an option</mat-label>
-              <mat-select [(value)]="selected">
-                <mat-option>None</mat-option>
-                <mat-option value="option1">Option 1</mat-option>
-                <mat-option value="option2">Option 2</mat-option>
-                <mat-option value="option3">Option 3</mat-option>
+              <mat-label>Select Date Format</mat-label>
+              <mat-select [(value)]="date" (selectionChange)="onDateFormatChage()">
+                <mat-option value="MM/DD/YYYY">MM/DD/YYYY</mat-option>
+                <mat-option value="DD/MM/YYYY">DD/MM/YYYY</mat-option>
+                <mat-option value="YYYY/DD/MM">YYYY/DD/MM</mat-option>
+                <mat-option value="YYYY/MM/DD">YYYY/MM/DD</mat-option>
               </mat-select>
             </mat-form-field>
-            <mat-form-field class="m-4" appearance="fill">
-              <mat-label>Select an option</mat-label>
-              <mat-select [(value)]="selected">
-                <mat-option>None</mat-option>
-                <mat-option value="option1">Option 1</mat-option>
-                <mat-option value="option2">Option 2</mat-option>
-                <mat-option value="option3">Option 3</mat-option>
+            <mat-form-field class="m-4" appearance="fill" (selectionChange)="oncurrencyFormatChage()">
+              <mat-label>Select currency</mat-label>
+              <mat-select [(value)]="currency">
+                <mat-option value="EUR">EUR</mat-option>
+                <mat-option value="USD">USD</mat-option>
+                <mat-option value="RUB">RUB</mat-option>
+                <mat-option value="PLN">PLN</mat-option>
               </mat-select>
             </mat-form-field>
+           
             <div class="nav-item">
               <a
                 style="height: 40px; width: 100px; cursor: pointer"
