feat add date formating

--- a/src/app/user-authentication/register/register.component.html
+++ b/src/app/user-authentication/register/register.component.html
@@ -74,9 +74,10 @@
             <input
               matInput
               [matDatepicker]="picker2"
+              
               formControlName="dateOfBirth"
             />
-            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-hint>{{ dateFormat }}</mat-hint>
             <mat-datepicker-toggle
               matIconSuffix
               [for]="picker2"
