--- a/src/app/booking/components/one-side/one-side.component.html
+++ b/src/app/booking/components/one-side/one-side.component.html
@@ -2,7 +2,7 @@
   <span><img src="../../../assets/planeRight.png" alt="planr" /></span>
   {{ flights[0].from }} to {{ flights[0].to }}
 </h2>
-<div class="cards-container d-flex m-2">
+<div *ngIf="!state.isSelected" class="cards-container d-flex m-2">
   <div
     *ngFor="let flight of flights | slice : 0 : 5"
     class="flight-card"
@@ -12,9 +12,6 @@
   >
     <p>{{ flight.date | date : "dd MMM" }}</p>
     <p>{{ flight.date | date : "EEEE" }}</p>
-    <!-- <div *ngIf="flight.date < 3">
-      <img src="../../../assets/noFly.png" alt="noFly" />
-    </div> -->
 
     <!-- will use user pipe next -->
     <p>{{ flight.cost | currency : "USD" }}</p>
@@ -30,4 +27,6 @@
 <app-flight-selected
   *ngIf="selectedCard"
   [flight]="selectedCard"
+  (changeEv)="selectFlight($event)"
+  [selected]="state.isSelected"
 ></app-flight-selected>
