--- a/src/app/booking/components/flight-selected/flight-selected.component.html
+++ b/src/app/booking/components/flight-selected/flight-selected.component.html
@@ -33,9 +33,9 @@
     <!-- to do  -->
     <p>Flight no. FR 1925</p>
   </div>
-  <div>
+  <div class="text-center">
     <p  class="d-flex justify-content-center align-items-center rounded-pill"
-    style="height: 70px; text-align: center;"
+    style="height: 70px; "
       appHiglight
       [elementAvailableSeats]="flight.available_seats"
       [elementTotalSeats]="flight.total_seats"
