fix: some styly proposals

--- a/src/app/booking/components/flight-selected/flight-selected.component.html
+++ b/src/app/booking/components/flight-selected/flight-selected.component.html
@@ -34,12 +34,12 @@
     <p>Flight no. FR 1925</p>
   </div>
   <div class="text-center">
-    <p  class="d-flex justify-content-center align-items-center rounded-pill"
-    style="height: 70px; "
+    <p
+      class="d-flex justify-content-center align-items-center rounded-pill"
       appHiglight
       [elementAvailableSeats]="flight.available_seats"
       [elementTotalSeats]="flight.total_seats"
-      >
+    >
       {{ flight.available_seats }} seats available
     </p>
     <div>
