--- a/src/app/booking/components/one-side/one-side.component.css
+++ b/src/app/booking/components/one-side/one-side.component.css
@@ -17,7 +17,11 @@
 }
 .moveElement {
   z-index: 2;
-  transform: translateY(-15%);
-  background-color: transparent;
-  transition: all 1s;
+  /* transform: translateY(-15%); */
+  /* background-color: transparent; */
+  background: #f9f9f9;
+  transition: all 0.4s;
+  transform: scale(1.1) translateY(-13px);
+  border: thin gray solid;
+  box-shadow: gray 3px 3px 4px;
 }
