--- a/src/app/booking/components/flights-search-result/flights-search-result.component.html
+++ b/src/app/booking/components/flights-search-result/flights-search-result.component.html
@@ -1,9 +1,24 @@
 <div class="container-md">
-  <one-side [flights]="oneWayFlights"></one-side>
-  <one-side *ngIf="backFlights" [flights]="backFlights"></one-side>
+  <one-side
+    [flights]="oneWayFlights"
+    type="one-way"
+    (storeSelect)="storeChoise('one-way', $event)"
+  ></one-side>
+  <one-side
+    *ngIf="backFlights"
+    [flights]="backFlights"
+    type="back"
+    (storeSelect)="storeChoise('back', $event)"
+  ></one-side>
 
   <div class="d-flex justify-content-end">
     <button class="btn" (click)="clickBack()">back</button>
-    <button class="btn btn-primary">continue</button>
+    <button
+      class="btn btn-primary"
+      (click)="clickContinue()"
+      [disabled]="selectedData"
+    >
+      continue
+    </button>
   </div>
 </div>
