--- a/src/app/booking/components/flights-search-result/flights-search-result.component.html
+++ b/src/app/booking/components/flights-search-result/flights-search-result.component.html
@@ -16,7 +16,7 @@
     <button
       class="btn btn-primary"
       (click)="clickContinue()"
-      [disabled]="selectedData"
+      [disabled]="!selectedData"
     >
       continue
     </button>
