--- a/src/app/passengers/passengers-view/passengers-view.component.html
+++ b/src/app/passengers/passengers-view/passengers-view.component.html
@@ -4,8 +4,7 @@
   <app-passenger-infant></app-passenger-infant>
   <app-passenger-contact-info></app-passenger-contact-info>
   <div class="row justify-content-end">
-
-    <a href="" class="btn btn-warning col-1 me-3">back</a>
+    <a routerLink=".." class="btn btn-warning col-1 me-3">back</a>
     <button type="submit" class="btn btn-success col-1">continue</button>
   </div>
 </form>
