--- a/src/app/passengers/components/passenger-each/passenger-each.component.html
+++ b/src/app/passengers/components/passenger-each/passenger-each.component.html
@@ -1,11 +1,7 @@
-<h1>2. child</h1>
+<!-- <h1>1. {{ title }}</h1> -->
 <div class="container--form">
-  <form
-    class="d-flex flex-column"
-    [formGroup]="childForm"
-    #formDirective="ngForm"
-    (ngSubmit)="onSubmit(formDirective)"
-  >
+  <div class="d-flex flex-column" [formGroup]="control">
+    <span>{{ count }}</span>
     <div class="d-flex align-items-between justify-content-between w-100">
       <mat-form-field>
         <input
@@ -15,7 +11,7 @@
           placeholder="First Name *"
           formControlName="name"
         />
-        <mat-error *ngIf="checkValidation('name')">
+        <mat-error *ngIf="control.get('name')?.invalid">
           {{ fieldRequired }}
         </mat-error>
       </mat-form-field>
@@ -32,7 +28,8 @@
           {{ fieldRequired }}
         </mat-error>
       </mat-form-field>
-      <mat-radio-group formControlName="gender">
+
+      <!-- <mat-radio-group formControlName="gender">
         <mat-radio-button
           class="btn-check-custom"
           name="options"
@@ -43,7 +40,7 @@
         <mat-label
           for="female"
           [ngClass]="{
-            active: childForm.get('gender')?.value === 'female'
+            active: adultForm.get('gender')?.value === 'female'
           }"
           (click)="setGender('female')"
           class="btn btn-primary m-2"
@@ -59,19 +56,19 @@
         <mat-label
           for="male"
           [ngClass]="{
-            active: childForm.get('gender')?.value === 'male'
+            active: adultForm.get('gender')?.value === 'male'
           }"
           (click)="setGender('male')"
           class="btn btn-primary"
           >Male</mat-label
         >
-      </mat-radio-group>
+      </mat-radio-group> -->
 
-      <mat-error *ngIf="checkValidation('gender')">
+      <!-- <mat-error *ngIf="checkValidation('gender')">
         {{ fieldRequired }}
-      </mat-error>
+      </mat-error> -->
 
-      <div class="d-flex justify-content-center">
+      <!-- <div class="d-flex justify-content-center">
         <mat-form-field appearance="fill">
           <mat-label>Choose a date</mat-label>
           <input
@@ -89,12 +86,12 @@
             {{ dateErrors() }}
           </mat-error>
         </mat-form-field>
-      </div>
+      </div> -->
 
       <hr />
     </div>
-    <mat-slide-toggle formControlName="specialNeeds"
+    <!-- <mat-slide-toggle formControlName="specialNeeds"
       >Slide me!</mat-slide-toggle
-    >
-  </form>
+    > -->
+  </div>
 </div>
