feat: initial view finish

--- a/src/app/passengers/components/passenger-each/passenger-each.component.css
+++ b/src/app/passengers/components/passenger-each/passenger-each.component.css
@@ -5,7 +5,15 @@ p {
 .progress-wrapper {
   padding: 2rem;
 }
-.btn-check-custom {
+/* .btn-check-custom {
   position: absolute;
   clip: rect(0, 0, 0, 0);
+} */
+
+mat-button-toggle-group {
+  height: 55px;
+}
+mat-button-toggle {
+  display: flex;
+  align-items: center;
 }
