--- a/src/app/passengers/components/passenger-each/passenger-each.component.html
+++ b/src/app/passengers/components/passenger-each/passenger-each.component.html
@@ -1,4 +1,3 @@
-<!-- <h1>1. {{ title }}</h1> -->
 <div class="container--form">
   <div class="d-flex flex-column" [formGroup]="control">
     <span>{{ count }}</span>
@@ -29,69 +28,35 @@
         </mat-error>
       </mat-form-field>
 
-      <!-- <mat-radio-group formControlName="gender">
-        <mat-radio-button
-          class="btn-check-custom"
-          name="options"
-          id="female"
-          [value]="'female'"
+      <mat-button-toggle-group formControlName="gender">
+        <mat-button-toggle value="male" class="btn btn-primary m-2"
+          >Male</mat-button-toggle
         >
-        </mat-radio-button>
-        <mat-label
-          for="female"
-          [ngClass]="{
-            active: adultForm.get('gender')?.value === 'female'
-          }"
-          (click)="setGender('female')"
-          class="btn btn-primary m-2"
-          >Female</mat-label
+        <mat-button-toggle value="female" class="btn btn-primary m-2"
+          >Female</mat-button-toggle
         >
-        <mat-radio-button
-          class="btn-check-custom"
-          name="options"
-          id="male"
-          [value]="'male'"
-        >
-        </mat-radio-button>
-        <mat-label
-          for="male"
-          [ngClass]="{
-            active: adultForm.get('gender')?.value === 'male'
-          }"
-          (click)="setGender('male')"
-          class="btn btn-primary"
-          >Male</mat-label
-        >
-      </mat-radio-group> -->
+      </mat-button-toggle-group>
 
-      <!-- <mat-error *ngIf="checkValidation('gender')">
-        {{ fieldRequired }}
-      </mat-error> -->
-
-      <!-- <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center">
         <mat-form-field appearance="fill">
           <mat-label>Choose a date</mat-label>
-          <input
-            matInput
-            [matDatepicker]="picker2"
-            formControlName="dateOfBirth"
-          />
+          <input matInput [matDatepicker]="picker2" formControlName="dOb" />
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle
             matIconSuffix
             [for]="picker2"
           ></mat-datepicker-toggle>
           <mat-datepicker #picker2></mat-datepicker>
-          <mat-error *ngIf="checkValidation('dateOfBirth')">
+          <mat-error *ngIf="checkValidation('dOb')">
             {{ dateErrors() }}
           </mat-error>
         </mat-form-field>
-      </div> -->
+      </div>
 
       <hr />
     </div>
-    <!-- <mat-slide-toggle formControlName="specialNeeds"
-      >Slide me!</mat-slide-toggle
-    > -->
+    <mat-slide-toggle formControlName="specialNeeds"
+      >Need speciale assistance?</mat-slide-toggle
+    >
   </div>
 </div>
